--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 </head>
 <body>
     
-        <div id="board2" style="width: 400px"></div>
+        <div id="board" style="width: 400px"></div>
+
         <button id="startBtn">Start Position</button>
-        <button id="clearBtn">Clear Board</button>
+        
+        <button id="move1Btn">e2-e4</button>
+        <button id="move2Btn">d2-d4, g8-f6</button>
+
+        <button id="showPositionBtn">Show position in console</button>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
